# OpenGLSimpleSkybox

./: CMakeLists.txt  Camera.h  Mesh.h  Model.h  Shader.h  Shadercpp1.txt  main.cpp  stbimg.cpp
res/BlackHole/: sphere.mtl
res/WaterScene/: LowPolyTrees.mtl
res/plane/: plane.mtl
res/shaders/: shaderenv.fs
